Added body padding

--- a/webroot/scss/_settings.scss
+++ b/webroot/scss/_settings.scss
@@ -344,7 +344,7 @@ $list-nested-margin: 0;
 // BUTTONS
 //
 
-// $include-html-button-classes: $include-html-classes;
+$include-html-button-classes: false;
 
 // We use these to build padding for buttons.
 // $button-tny: rem-calc(10);
