--- a/webroot/scss/typography.scss
+++ b/webroot/scss/typography.scss
@@ -1,3 +1,67 @@
+@charset "UTF-8";
+
+@font-face {
+  font-family : "xtreme-icons";
+  src         : url("../files/xtreme-icons/xtreme-icons.eot");
+  src         : url("../files/xtreme-icons/xtreme-icons.eot?#iefix") format("embedded-opentype"), url("../files/xtreme-icons/xtreme-icons.woff") format("woff"), url("../files/xtreme-icons/xtreme-icons.ttf") format("truetype"), url("../files/xtreme-icons/xtreme-icons.svg#xtreme-icons") format("svg");
+  font-weight : normal;
+  font-style  : normal;
+
+}
+
+[data-icon]:before {
+  font-family             : "xtreme-icons" !important;
+  content                 : attr(data-icon);
+  font-style              : normal !important;
+  font-weight             : normal !important;
+  font-variant            : normal !important;
+  text-transform          : none !important;
+  speak                   : none;
+  -webkit-font-smoothing  : antialiased;
+  -moz-osx-font-smoothing : grayscale;
+}
+
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family             : "xtreme-icons" !important;
+  font-style              : normal !important;
+  font-weight             : normal !important;
+  font-variant            : normal !important;
+  text-transform          : none !important;
+  speak                   : none;
+  //  line-height: 1;
+  -webkit-font-smoothing  : antialiased;
+  -moz-osx-font-smoothing : grayscale;
+}
+
+.icon-cancel:before {
+  content : "a";
+}
+
+.icon-double:before {
+  content : "b";
+}
+
+.icon-full:before {
+  content : "c";
+}
+
+.icon-left-side:before {
+  content : "d";
+}
+
+.icon-right-side:before {
+  content : "e";
+}
+
+.icon-checked:before {
+  content : "f";
+}
+
+.icon-unchecked:before {
+  content : "g";
+}
+
 @font-face {
   font-family : "Helvetica Neue Condensed Black";
   src         : url("../files/HelveticaNeueLTStd-BlkCn.otf");
@@ -22,7 +86,6 @@
   font-family : "Helvetica Neue Thin Condensed";
   src         : url("../files/HelveticaNeueLTStd-ThCn.otf");
 }
-
 
 @font-face {
   font-family : "Helvetica Neue Ultra Light";
@@ -64,16 +127,16 @@
 .body-font-color { color : $body-font-color; }
 
 #hours-and-location {
-  text-align: right;
-  line-height: 1.25rem;
-  padding-top:rem-calc(4px);
+  text-align  : right;
+  line-height : 1.25rem;
+  padding-top : rem-calc(4px);
   @include HelveticaThCn;
   span.header-red { color : $xtreme-red; }
   li:nth-of-type(2) {
-    padding-top:rem-calc(4px);
-    font-size: 1.25 * $body-font-size;
+    padding-top : rem-calc(4px);
+    font-size   : 1.25 * $body-font-size;
   }
-  li:last-of-type {font-size: 0.75 * $body-font-size;}
+  li:last-of-type { font-size : 0.75 * $body-font-size; }
 }
 
 /**************************************************************
@@ -86,7 +149,7 @@
 #user-activity-panel {
   a {
     @include HelveticaLtCn;
-    transition: color 0.3s, font-family 0.3s;
+    transition  : color 0.3s, font-family 0.3s;
     text-align  : center;
     line-height : 0.25 * $user-activity-panel-height;
     padding-top : 0.25 * $user-activity-panel-height;
@@ -97,9 +160,9 @@
       color : invert($body-font-color);
     }
   }
-   li.active {
-      a { @include HelveticaMdCn;}
-   }
+  li.active {
+    a { @include HelveticaMdCn; }
+  }
   h2 {
     font-size   : $h3-font-size;
     line-height : $user-activity-panel-height;
@@ -119,7 +182,7 @@ li.orbcat {
   line-height : 1.5 * $orbcat-menu-item-height;
   text-align  : center;
   a {
-    transition: color $global-transition-time;
+    transition  : color $global-transition-time;
     @include HelveticaMdCn;
     color       : $body-font-color;
     font-size   : rem-calc(14px);
@@ -148,26 +211,33 @@ li.orbcat {
 div.orb-card-button {
   text-align : center;
 }
+
 .orb-card-stage-right-menu li {
-  font-size        : $h5-font-size;
-  line-height      : $orb-card-stage-menu-item-height;
-  a, span {
-     transition : color $global-transition-time, opacity 0.2s;
-     color      : $white;
-     &.fade-out { opacity : 0; }
-   }
+  @include HelveticaBlkCn;
+  font-size   : $h5-font-size;
+  line-height : $orb-card-stage-menu-item-height;
+  a, h5 {
+    transition  : color $global-transition-time, opacity 0.2s;
+    color       : $white;
+    line-height : inherit;
+    &.fade-out { opacity : 0; }
+  }
   &.active {
-    a, span, h5 { color  : $dark-grey;}
+    a, h5 { color : $dark-grey; }
+  }
+  .topping-coverage {
+    font-size      : rem-calc(32px);
+    line-height    : $orb-card-stage-menu-item-height;
+    vertical-align : middle;
   }
 }
+
 div.orb-card-content {
   &#description { @include HelveticaMdCn; }
   &#price-matrix {
     @include HelveticaMdCn;
-    color: $text-grey;
+    color : $text-grey;
     h5 { color : $xtreme-red; }
-    li div{
-    };
   }
   &#orb-card-options {
     background-color : $text-grey;
@@ -175,14 +245,20 @@ div.orb-card-content {
 }
 
 .orb-size-panel {
-    li {
-      h3 {
-        color:$white;
-        text-align:center;
-      }
+  li {
+    h3 {
+      color      : $white;
+      text-align : center;
+    }
     &.active {
-      h3 { color:$dark-grey;}
+      h3 { color : $dark-grey; }
       color : $dark-grey;
     }
+  }
+}
+
+ ul#toppings-filter {
+   li.toppings-filter *, li.toppings-filter.active *, li.toppings-filter.inactive * {
+    color : $white;
   }
 }
